	  the MIDI file further. Additionally, improved timing of the MIDI recorder wrt. memory allocations in the MIDI thread
	  yet fixed a couple of bugs that may be revealed when a broken / unsupported MIDI event reaches the recorder,
	  or in case MIDI events are received out of order (i.e. with decreasing timestamps).

2017-12-25:

	1.7.1 released.

	* Improved layout of partial state LEDs when maximum number of partials is set bigger than 63.
	* Fixed partial state LED widgets being not updated upon a change of Max Partials option.
	  This may also have resulted in crashes.

2017-12-25:

	1.7.0 released.

	* Replaced application icon for mt32emu-qt with a new nicer one.
	* Fixed a few minor bugs in MIDI player dialog.
	* Fixed various issues with accessing files with localised pathnames.
	* Improved timing accuracy of realtime rendering.
	* Added experimental support for Windows 9x platform. As a side effect, Qt version 4.5.3 is now supported.
	* Added new option "Max Partials" in synth configuration. It allows setting the maximum number of partials
	  playing simultaneously.

2017-07-29:

	1.6.0 released.

	* Improved a bit the LCD emulation to better match behaviour of old MT-32 units.
	* Improved synth profile handling. When a non-default synth profile is selected in the synth properties dialog,
	  it is now used during synth re-opening (provided that it is pinned or an active MIDI session persists).
	* Added support for SysEx fragments in standard MIDI files played using the internal MIDI player.
	* Added option "Nice Amp Ramp" in the Synth Properties dialog.
	* Improved "Standard MIDI file converter" dialog:
	  - PCM targets are now automatically named, the path names are based on the most recent directory specified;
	  - added possibility to quickly configure a group of MIDI files to convert to a PCM per file (with an accompanying SysEx);
	  - added "Edit PCM" button to allow renaming the currently selected PCM target;