@@ -1,4 +1,4 @@
-/* Copyright (C) 2011-2019 Jerome Fisher, Sergey V. Mikayev
+/* Copyright (C) 2011-2021 Jerome Fisher, Sergey V. Mikayev
  *
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -169,6 +169,14 @@ void SynthPropertiesDialog::on_engageChannel1CheckBox_stateChanged(int state) {
 	synthRoute->setInitialMIDIChannelsAssignment(state == Qt::Checked);
 }
 
+void SynthPropertiesDialog::on_nicePanningCheckBox_stateChanged(int state) {
+	synthRoute->setNicePanningEnabled(state == Qt::Checked);
+}
+
+void SynthPropertiesDialog::on_nicePartialMixingCheckBox_stateChanged(int state) {
+	synthRoute->setNicePartialMixingEnabled(state == Qt::Checked);
+}
+
 void SynthPropertiesDialog::updateReverbSettings() {
 	if (ui->reverbCheckBox->checkState() == Qt::PartiallyChecked) return;
 	synthRoute->setReverbSettings(ui->reverbModeComboBox->currentIndex(),
@@ -224,6 +232,8 @@ void SynthPropertiesDialog::restoreDefaults() {
 	ui->reverbOutputGainSlider->setValue(100);
 	ui->reverseStereoCheckBox->setCheckState(Qt::Unchecked);
 	ui->niceAmpRampCheckBox->setCheckState(Qt::Checked);
+	ui->nicePanningCheckBox->setCheckState(Qt::Unchecked);
+	ui->nicePartialMixingCheckBox->setCheckState(Qt::Unchecked);
 	ui->engageChannel1CheckBox->setCheckState(Qt::Unchecked);
 }
 
@@ -250,6 +260,8 @@ void SynthPropertiesDialog::loadSynthProfile(bool reloadFromSynthRoute) {
 	ui->reverbOutputGainSlider->setValue(synthProfile.reverbOutputGain * 100);
 	ui->reverseStereoCheckBox->setCheckState(synthProfile.reversedStereoEnabled ? Qt::Checked : Qt::Unchecked);
 	ui->niceAmpRampCheckBox->setCheckState(synthProfile.niceAmpRamp ? Qt::Checked : Qt::Unchecked);
+	ui->nicePanningCheckBox->setCheckState(synthProfile.nicePanning ? Qt::Checked : Qt::Unchecked);
+	ui->nicePartialMixingCheckBox->setCheckState(synthProfile.nicePartialMixing ? Qt::Checked : Qt::Unchecked);
 	ui->engageChannel1CheckBox->setCheckState(synthProfile.engageChannel1OnOpen ? Qt::Checked : Qt::Unchecked);
 }
 
